--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is a test</h1>
     <p>This is a test paragraph</p>
+    <p>This is a second test paragraph</p>
 </body>
 </html>
